[gd_scene load_steps=3 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=2]

[node name="NaveBase" type="RigidBody2D"]
position = Vector2( 0.779633, -0.106995 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.597222, -0.621137 )
rotation = 1.57802

[node name="Canion" parent="." instance=ExtResource( 2 )]
cadencia_disparo = 0.25
velocidad_proyectil = 1600

[node name="Impacto_sfx" type="AudioStreamPlayer" parent="."]
mix_target = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
